Added configured database and repository

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Database": "Server=MARTIS\\SQLEXPRESS;Initial Catalog=AppDatabase;User ID=InvoiceManager;Password=sysadmin;Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true;"
+  }
 }
