--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CoreServices\CoreServices.csproj" />
     <ProjectReference Include="..\OutsideInfrastructure\OutsideInfrastructure.csproj" />
   </ItemGroup>
 
